[tool.poetry]
name = "distillgpt-finetuning"
version = "0.1.0"
description = "Finetuning gpt2 on textual data"
authors = ["Maxim Afteniy"]
readme = "README.md"
packages = [{include = "distillgpt_finetuning"}]

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^3.1.0"
ftfy = "^6.3.1"
unidecode = "^1.3.8"
pylatexenc = "^2.10"
einops = "^0.8.0"
tqdm = "^4.66.6"
torch = "^2.5.1"
transformers = "^4.46.2"
peft = "^0.13.2"
accelerate = "^1.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
